backend/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaker
  labels:
    app.kubernetes.io/name: streaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: streaker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: streaker
    spec:
      containers:
        - name: streaker
          image: "${IMAGE}"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthy
              port: http
          readinessProbe:
            httpGet:
              path: /healthy
              port: http
          resources:
            {}
