backend/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: streaker
  labels:
    app.kubernetes.io/name: streaker
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: streaker
